tests/baselines/reference/declareFileExportAssignmentWithVarFromVariableStatement(strict=true).errors.txt
declareFileExportAssignmentWithVarFromVariableStatement.ts(3,10): error TS7006: Parameter 'res' implicitly has an 'any' type.
declareFileExportAssignmentWithVarFromVariableStatement.ts(3,15): error TS7006: Parameter 'req' implicitly has an 'any' type.
declareFileExportAssignmentWithVarFromVariableStatement.ts(3,20): error TS7006: Parameter 'next' implicitly has an 'any' type.
declareFileExportAssignmentWithVarFromVariableStatement.ts(18,10): error TS2454: Variable 'm2' is used before being assigned.


==== declareFileExportAssignmentWithVarFromVariableStatement.ts (4 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
             ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
                  ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                       ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    var x = 10, m2: {
        (): m2.connectExport;
        test1: m2.connectModule;
        test2(): m2.connectModule;
    };
    
    export = m2;
             ~~
!!! error TS2454: Variable 'm2' is used before being assigned.